--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
 <head>
 <title> My Personal Website </title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N05LNH8W1N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N05LNH8W1N');
+</script>
 </head>
 
 <body bgcolor="white" text="blue">
