--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 	<title>JY Review</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-N05LNH8W1N"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5EFBCCLPMP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-N05LNH8W1N');
+  gtag('config', 'G-5EFBCCLPMP');
 </script>
 	
 </head>
