--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
-	<title>JY Review</title>
+	<meta name="title" content="JY Review - What is in Malaysia?">
+	<meta name="description" content="JY Review is where you can get best reviews of what is in Malaysia. This is helpful for people who want to visit Malaysia so come have a look!">
+	<meta name="keywords" content="JY Review, malaysia review, malaysia cuisines, malaysia traveling spot, things in malaysia, malaysia fun facts, malaysia lovers">
+	<meta name="robots" content="index, follow">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="language" content="English">
+	<title>JY Review - What is in Malaysia?</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-N05LNH8W1N"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,7 +26,7 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html"><img src="images/logo.png" alt="Logo" /></a>
+				<a href="index.html"><img src="images/logo.png" alt="JY Review Logo" /></a>
 			</div>
 			<ul>
 				<li class="current"><a href="index.html"><span>Home</span></a></li>
@@ -35,7 +41,7 @@
 				<li>
 					<h1><a href="food.html">Food</a></h1>
 					<div>
-						<a href="food.html"><img src="images/food.jpg" alt="Image" /></a>
+						<a href="food.html"><img src="images/food.jpg" alt="Malaysia Cuisines" /></a>
 					</div>
 					<span>What make Malaysian cuisine so special?</span>
                                         <p>
@@ -49,7 +55,7 @@
 				<li>
 					<h1><a href="travellingSpot.html">Travelling Spot</a></h1>
 					<div>
-						<a href="travellingSpot.html"><img src="images/hot spot.jpg" alt="Image" /></a>
+						<a href="travellingSpot.html"><img src="images/hot spot.jpg" alt="Malaysia Hot Spot" /></a>
 					</div>
 					<span>Why you should visit Malaysia?</span>
                                         <p>
@@ -64,7 +70,7 @@
 				<li>
 					<h1><a href="funFacts.html">Fun Facts</a></h1>
 					<div>
-						<a href="index.html"><img src="images/fun facts.jpg" alt="Image" /></a>
+						<a href="index.html"><img src="images/fun facts.jpg" alt="Malaysia Fun Facts" /></a>
 					</div>
                                         <span>Do you know Malaysia's oldest name?</span><br/>
 					
